# nixos-config-puller

./: Cargo.toml  LICENSE  default.nix  flake.nix  module.nix  shell.nix
src/: main.rs
src/config/: mod.rs
src/nixos/configuration/: check_for_updates.rs  mod.rs  upgrade.rs
src/ui/: mod.rs
src/ui/components/atoms/: button.rs  mod.rs  terminal_view.rs
src/ui/components/organisms/: mod.rs  terminal_view.rs
src/ui/config/: colors.rs
src/ui/pages/: root.rs
